# Calculator

./: .gitignore  CMakeLists.txt  README.md
include/: Calculator.h
src/: SimpleCalculator.cpp  main.cpp
